[tool.poetry]
name = "nlogs"
version = "0.1.0"
description = ""
authors = ["Arseny Sher <sher-ars@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
api-v1-client = {path = "/home/ars/neon/cloud/tests_e2e/api-v1-client"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
